deploy producer kafka to register endpoint

--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 server.port=8080
 #--
-spring.datasource.url=jdbc:postgresql://localhost:5432/db-auth-users
+spring.datasource.url=jdbc:postgresql://localhost:5432/db-auth
 spring.datasource.username=postgres
 spring.datasource.password=140744
 spring.sql.init.mode=always
 #--
 jwt.secret=984hg493gh0sd9rthr0443uruj2309yh937gc7Se87t3f89723gf
 jwt.lifetime=30m
+#==
+kafka.bootstrap.address = localhost:9092
