--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -7,5 +7,13 @@ spring.sql.init.mode=always
 #--
 jwt.secret=984hg493gh0sd9rthr0443uruj2309yh937gc7Se87t3f89723gf
 jwt.lifetime=30m
-#==
-kafka.bootstrap.address = localhost:9092
+#--
+kafka.bootstrap.address=localhost:9092
+#--
+spring.kafka.consumer.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=group_id
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+#--
