--- a/music-content-service/src/main/resources/application.properties
+++ b/music-content-service/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.seria
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 #--
 jwt.secret=984hg493gh0sd9rthr0443uruj2309yh937gc7Se87t3f89723gf
+#--
+track.upload.dir=music
