add upload tracks endpoint

--- a/music-content-service/src/main/resources/application.properties
+++ b/music-content-service/src/main/resources/application.properties
@@ -16,4 +16,8 @@ spring.kafka.consumer.properties.spring.json.trusted.packages=*
 #--
 jwt.secret=984hg493gh0sd9rthr0443uruj2309yh937gc7Se87t3f89723gf
 #--
-file.upload-dir=../music
+file.upload-dir=./music
+#--
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+spring.servlet.multipart.enabled=true
